Making sure everything is updated